# ai-agent-council

./: .gitignore  README.md  pyproject.toml
configs/: laptop-4agent.yaml  workstation-4agent.yaml
evals/: tasks.yaml
src/ai_agent_council/: __init__.py  __main__.py  _timing.py  agent.py  cli.py  config.py  council.py  evals.py  exceptions.py  llm.py  logging.py  models.py  phases.py  prompts.py  retrospectives.py  tools.py  transcript.py
src/ai_agent_council/templates/: __init__.py  laptop-4agent.yaml  minimal.yaml  power.yaml  server-6agent.yaml  workstation-4agent.yaml  workstation.yaml
tests/: conftest.py  fakes.py  test_agent.py  test_cli.py  test_config.py  test_council.py  test_dissent_quota.py  test_evals.py  test_fetch_url.py  test_integration_ollama.py  test_layered.py  test_llm.py  test_persona.py  test_phases.py  test_restate.py  test_retrospective.py  test_sycophancy_priors.py  test_tool_calling.py  test_tools.py
