[project]
name = "ai-agent-council"
version = "0.1.0"
description = "A Belbin-roles multi-agent council implementing the Braintrust workflow with cognitive diversity across model families."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Spencer" }]
keywords = ["llm", "multi-agent", "ollama", "litellm", "braintrust", "belbin"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "litellm>=1.76",
    "pydantic>=2.9",
    "pyyaml>=6.0.2",
    "typer>=0.14",
    "rich>=13.9",
    "tenacity>=9.0",
]

[project.scripts]
council = "ai_agent_council.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_agent_council"]

[tool.hatch.build.targets.sdist]
include = [
    "src/ai_agent_council",
    "README.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
    "N",     # pep8-naming
    "C4",    # flake8-comprehensions
    "PT",    # pytest style
    "FA",    # flake8-future-annotations — flag redundant `from __future__ import annotations`
    "ASYNC", # flake8-async — blocking calls in async, gather vs TaskGroup
    "PERF",  # Perflint
    "A",     # flake8-builtins — catch shadowing stdlib names
]
ignore = [
    "E501", # handled by formatter
]

[tool.ruff.lint.per-file-ignores]
# B008: pytest fixtures often look like mutable defaults.
# ASYNC240: test setup frequently touches sync paths inside async test functions; fine.
"tests/*" = ["B008", "ASYNC240"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
possibly-missing-attribute = "warn"
possibly-missing-import = "error"
redundant-cast = "warn"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests requiring external services",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=1.0",
    "ruff>=0.8",
    "ty>=0.0.31,<0.1",
]
